--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,78 @@
-flask
-pytest
-gunicorn
-pandas
-selenium
-datetime
-pandas_ods_reader
+aiodns==3.0.0
+aiosmtpd==1.4.4.post2
+altgraph==0.17.3
+async-generator==1.10
+atomicwrites==1.4.0
+atpublic==3.1.1
+attrs==21.4.0
+beautifulsoup4==4.11.1
+bs4==0.0.1
+certifi==2022.6.15
+cffi==1.15.0
+chardet==5.1.0
+charset-normalizer==2.1.1
+click==8.1.3
+colorama==0.4.5
+cryptography==37.0.2
+DateTime==4.4
+dnspython==2.3.0
+email-validator==2.0.0.post2
+et-xmlfile==1.1.0
+ezodf==0.3.2
+Flask==2.1.2
+Flask-Excel==0.0.7
+future==0.18.2
+gunicorn==20.1.0
+h11==0.13.0
+idna==3.3
+iniconfig==1.1.1
+instagramy==4.5
+instaloader==4.9.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+lml==0.1.0
+lxml==4.9.1
+MarkupSafe==2.1.1
+numpy==1.23.0
+openpyxl==3.0.10
+outcome==1.2.0
+packaging==21.3
+pandas==1.4.3
+pandas-ods-reader==0.1.4
+pefile==2022.5.30
+pluggy==1.0.0
+py==1.11.0
+py3dns==3.2.1
+pycares==4.3.0
+pycparser==2.21
+pyexcel==0.7.0
+pyexcel-io==0.6.6
+pyexcel-webio==0.1.4
+pyinstaller==5.6.2
+pyinstaller-hooks-contrib==2022.13
+pyodbc==4.0.39
+pyOpenSSL==22.0.0
+pyparsing==3.0.9
+PySocks==1.7.1
+pytest==7.1.2
+python-dateutil==2.8.2
+python-dotenv==0.21.0
+pytz==2022.1
+pywin32-ctypes==0.2.0
+requests==2.28.1
+selenium==4.3.0
+six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
+texttable==1.6.7
+tk==0.1.0
+tomli==2.0.1
+trio==0.21.0
+trio-websocket==0.9.2
+urllib3==1.26.9
+validate-email==1.3
+verify-email==2.4.3
+Werkzeug==2.1.2
+wsproto==1.1.0
+zope.interface==5.4.0
